# oop_exercise_07

./: CMakeLists.txt  main.cpp  report.docx  task.txt
Application/: Application.cpp  Application.hpp  Application.s
Application/Factory/: Factory.hpp
Figure/: Figure.cpp  Figure.hpp  Figure.tpp
Figure/Octahedron/: Octahedron.cpp  Octahedron.h  Octahedron.tpp
Figure/Square/: Square.cpp  Square.h  Square.tpp
Figure/Triangle/: Triangle.cpp  Triangle.h  Triangle.tpp
tests/: test_01.txt  test_02.txt
